updating deprecated ejs partials

--- a/views/aihistory.ejs
+++ b/views/aihistory.ejs
@@ -1,4 +1,4 @@
-<% include partials/header.ejs %>
+<%- include ('partials/header.ejs') -%>
 <script>
     document.getElementById("home").innerHTML = "<a href='/index'>Home</a>";
     document.getElementById("used").innerHTML = "<a href='/howitsused'>How is AI used?</a>";
@@ -53,4 +53,4 @@
             </div>
         </main>
         
-<% include partials/footer.ejs %>
+<%- include('partials/footer.ejs') -%>
