--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<% include partials/header.ejs %>
+<%- include('partials/header.ejs') -%>
 <script>
     document.getElementById("home").innerHTML = "<a href='/index' style='color:#86d7f0'>Home</a>";
     document.getElementById("used").innerHTML = "<a href='/howitsused'>How is AI used?</a>";
@@ -27,4 +27,4 @@
             </div>
         </main>
         
- <% include partials/footer.ejs %>       
+ <%- include('partials/footer.ejs') -%>       
